--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -176,7 +176,7 @@
 }
 //Mobile Portrait
 @mixin mobile() {
-  @media screen and (max-width: 419px) and (min-height: 601px) {
+  @media screen and (max-width: 419px) and (min-height: 630px) {
 
     .topNav > ul > li > a {
       padding: 0 1px;
@@ -232,7 +232,9 @@
     #createBodyText {
       padding-left: 1px;
       padding-right: 1px;
+      height: 110px;
     }
+
     .createTitleText
     {
       max-width: 70%;
@@ -241,13 +243,7 @@
     .infoNav > ul > li {
       width: 100%;
     }
-      .innerProfileMenus {
-      height: 70px;
-    }
-    .innerPhotos {
-      height: 100px;
-      padding-top: 3px;
-    }
+
     .listResourceLeft {
       padding-left: 1%;
       width: 45%;
@@ -316,7 +312,7 @@
     }
     #centerText
     {
-      width: 85%;
+      width: 90%;
     }
 
     .topNav > ul > .searchIconBackground
@@ -362,34 +358,13 @@
     #createBodyText {
       padding-left: 1px;
       padding-right: 1px;
+      height: 30px;
     }
     .createTitleText {
       max-width: 60%;
     }
 
-    #createOptions {
-      max-height: 300px;
-    }
 
-    .innerPhotos {
-      height: 120px;
-    }
-    .listResourceLeft {
-      padding-left: 1%;
-      width: 45%;
-    }
-    .interactButton
-    {
-      padding: 3px 1px;
-    }
-    .profileNav > ul > li > a
-    {
-      color: #202020;
-      display: block;
-      line-height: 45px;
-      padding: 1px 10px;
-
-    }
     .profileNav > ul > li:hover > div
     {
       visibility: hidden;
@@ -397,9 +372,8 @@
   }
 
   //Small screen mobile portrait
-  @media screen and (max-width: 465px) and (max-height: 600px) {
-
-
+  @media screen and (max-width: 465px) and (max-height: 629px)
+  {
     .topNav > ul > li > a {
       padding: 0 0;
     }
@@ -442,6 +416,10 @@
       padding-right: 3px;
     }
 
+    #createBodyText {
+      height: 100px;
+    }
+
     .formDataContainer {
       width: 98%;
       height: auto;
@@ -458,15 +436,11 @@
       padding-right: 1px;
     }
 
-
     .infoNav > ul > li {
       width: 100%;
     }
 
-    .innerPhotos {
-      padding-top: 5px;
-      height: 80px;
-    }
+
     .listResourceLeft {
       padding-left: 1%;
       width: 45%;
@@ -515,8 +489,6 @@
   //Small screen mobile landscape
   @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px)
   {
-    html {
-    }
 
     //Tooltip reposition
     .leftSection .tooltiptext {
@@ -575,15 +547,9 @@
     #createBodyText {
       padding-left: 1px;
       padding-right: 1px;
+      height: 30px;
     }
 
-    .innerProfileMenus {
-      height: 70px;
-    }
-    .innerPhotos {
-      height: 120px;
-      padding-top: 3px;
-    }
     .listResourceLeft {
       padding-left: 1%;
       width: 45%;
